--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   
   <div class="outer">
 
+    <!-- innermost -->
     <div class="innermost">
       <img src="images\image-qr-code.png" alt="iphone-mockup" id="image">
       <p class="heading">
